--- a/VidyaCat2.MVC/VidyaCat2.MVC.csproj
+++ b/VidyaCat2.MVC/VidyaCat2.MVC.csproj
@@ -187,6 +187,15 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\fataMorgana.jpg" />
+    <Content Include="Assets\judgment.jpg" />
+    <Content Include="Assets\motoGP21.jpg" />
+    <Content Include="Assets\nierReplicant.jpg" />
+    <Content Include="Assets\oddworldSoulstorm.jpg" />
+    <Content Include="Assets\sagaFrontier.jpg" />
+    <Content Include="Assets\thereIsNoGame.jpg" />
+    <Content Include="Assets\theShow21.jpg" />
+    <Content Include="Assets\thps1_2.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -378,7 +387,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Assets\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
