--- a/VidyaCat2.MVC/Web.config
+++ b/VidyaCat2.MVC/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VidyaCat2.MVC-20210503104020.mdf;Initial Catalog=aspnet-VidyaCat2.MVC-20210503104020;Integrated Security=True" providerName="System.Data.SqlClient" />
-	  <add name="AzureConnection" connectionString="Server=tcp:vidyacat2mvcdbserver.database.windows.net,1433;Initial Catalog=VidyaCat2.MVC_db;Persist Security Info=False;User ID=johncaseymcd@gmail.com@vidyacat2mvcdbserver;Password=J@nuary2408!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+	  <add name="AzureConnection" connectionString="Server=tcp:vidyacat2mvcdbserver.database.windows.net,1433;Initial Catalog=VidyaCat2.MVC_db;Persist Security Info=False;User ID=johncaseymcd@gmail.com@vidyacat2mvcdbserver;Password=jsdlifoj;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
